Fix: media queries added

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <div class="contact-info-item">
                   <h3 class="mb-3 text-white">Hello Welcome!</h3>
                   <p class="footer-text mb-0">+91-81480 58416</p>
-                  <p><a href="mailto:hello@company.co">vinothkumartrofficial@gmail.com</a></p>
+                  <p><a href="mailto:vinothkumartrofficial@gmail.com">vinothkumartrofficial@gmail.com</a></p>
                 </div>
 
                 <ul class="social-links">
