Fix: Footer aligned

--- a/index.html
+++ b/index.html
@@ -305,14 +305,14 @@
     <!-- FOOTER -->
      <footer class="footer py-5">
           <div class="container">
-               <div class="d-flex justify-content-between">
-                        <p class="copyright-text text-center">&copy; 2024 - Vinoth Kumar T R</p>
-                        <!-- <p class="copyright-text text-center">Designed by <a rel="nofollow" href="#" style="color: inherit; font-weight: 700;" >Vino-Rishi</a></p> -->
-                        <div class="link-text d-flex justify-content-end text-center">
-                            <a href="#about" style="text-decoration: none; color: gray; margin-right: 3px;">About</a><span style="margin-right: 5px; color: darkgray;">|</span> 
-                            <a href="#project" style="text-decoration: none; color: gray; margin-right: 3px;"> Projects</a> <span style="margin-right: 5px; color: darkgray;">|</span>
-                            <a href="#resume" style="text-decoration: none; color: gray; margin-right: 3px;"> Resume</a>
-                        </div>
+               <div class="row d-flex justify-content-between text-center">
+                        <p class="copyright-text ml-5 pl-5">&copy; 2024 - Vinoth Kumar T R</p>
+                            <!-- <p class="copyright-text text-center">Designed by <a rel="nofollow" href="#" style="color: inherit; font-weight: 700;" >Vino-Rishi</a></p> -->
+                        <ul class="link-text d-flex ml-5 pl-5">
+                          <a href="#about" style="text-decoration: none; color: gray; margin-right: 3px;">About</a><span style="margin-right: 5px; color: darkgray;">|</span> 
+                          <a href="#project" style="text-decoration: none; color: gray; margin-right: 3px;"> Projects</a> <span style="margin-right: 5px; color: darkgray;">|</span>
+                          <a href="#resume" style="text-decoration: none; color: gray; margin-right: 3px;"> Resume</a>
+                      </ul>
                </div>
           </div>
      </footer>
