Feat: Tooltip added

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <div class="watsapp-container">
     <div class="d-flex justify-content-end mr-3 mb-3">
       <a href="https://wa.me/918148058416?text=Hi Vinoth! Did you available right now??" target="_blank" class="whatsapp-icon mr-5" data-toggle="tooltip" data-placement="left" title="Welcome! Let's chat with us">
-      <i class="fa fa-whatsapp my-float"></i>
+        <i class="fa fa-whatsapp my-float" data-toggle="tooltip" data-placement="left" title="Chat with us"></i>
       </a>
     </div>
   </div>  
